--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                     <img src="img/doktorka (1).png" alt="">
                 </div>
             </div>
-<!-- drprofile? -->
+                      <!-- drprofile? -->
             <div class="row ">
                 <div class="col-sm-12 lg-6 d-flex">
 
@@ -598,6 +598,31 @@
         </div>
         <button class="votosbtn px-5 py-3"><b>View our team of surgeons <i style="font-size:10px ;" class="fa-sharp fa-solid fa-angle-right ps-1"></i></b></button>
     </section>
+  <hr style="margin-top: 40%; width:1000px; margin-left: 10%;">
+
+
+
+
+  <section>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 lg-3">
+                <div class="pt-5 pe-5">
+                    <h1 style="color:#000000;font-size:50px; font-weight: bold;">Latest  <span
+                            style="color:#f95759;font-size:50px; font-weight: bolder;"> Medicare news</span></h1>
+                    <div class=" my-2" style="background-color: #0da8bc;width:70px;height:3px;"></div>
+                    <p style="font-size:22px;width: 756px;">Read our latest news from the company or general medical news. Feel free to ask questions in comments for any news you find interesting.</p>
+                </div>
+            </div>
+            <div class="col-12 lg-6">
+                
+            </div>
+        </div>
+    </div>
+  </section>
+
+
+    
 
 
 
