--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
                                             <a class="nav-link homel active " aria-current="page" href="#">Home</a>
                                         </li>
                                         <div class="dropdown pe-3 pt-2  ">
-                                            <a href="#">
+                                            <a href="index.html">
                                                 <button class="ttt"> About us</button>
                                             </a>
 
                                             <div class="dropdown-content">
-                                                <a style="font-size: 13px;" href="#"><i
+                                                <a style="font-size: 13px;" href="general.html"><i
                                                         class="fa-sharp fa-solid fa-angle-right pe-1"></i> General
                                                     information</a>
                                                 <a style="font-size: 13px;" href="#"><i
@@ -192,6 +192,7 @@
                     <div class="texxt mt-5">
                         <h1 style="font-weight: bolder; font-size:100px;text-align: center;color: white;">We take <span
                                 style="color: #f95759;">Care</span></h1>
+                                <div  style="background-color: rgb(9, 134, 156); width: 5%; height: 2px; margin-left: 45%;" class="mb-2 "></div>
                         <div class="">
                             <p style="font-size:25px ; color:white; font-weight:400;">We at Medicare are always fully
                                 focused on helping your to
@@ -541,7 +542,7 @@
 
                         </div>
                         <div class="scalpel ">
-                            <img src="img/scalpel2.png" width="55px" height="55px" class=" sss" alt="">
+                            <img src="img/virus.png" width="55px" height="55px" class=" sss" alt="">
                         </div>
                     </div>
 
@@ -569,7 +570,7 @@
 
                         </div>
                         <div class="scalpel ">
-                            <img src="img/scalpel2.png" width="55px" height="55px" class=" sss" alt="">
+                            <img src="img/ear.png" width="55px" height="55px" class=" sss" alt="">
                         </div>
                     </div>
 
@@ -599,14 +600,14 @@
 
                         </div>
                         <div class="scalpel ">
-                            <img src="img/scalpel2.png" width="55px" height="55px" class=" sss" alt="">
+                            <img src="img/brain.png" width="55px" height="55px" class=" sss" alt="">
                         </div>
                     </div>
                 </div>
             </div>
 
         </div>
-        <button class="votosbtn px-5 py-3"><b>View our team of surgeons <i style="font-size:10px ;"
+        <button class=" btn votosbtn px-5 py-3"><b>View our team of surgeons <i style="font-size:10px ;"
                     class="fa-sharp fa-solid fa-angle-right ps-1"></i></b></button>
     </section>
     <hr style="margin-top: 50%; width:1000px; margin-left: 10%;">
